--- a/templates/shop/department.html.twig
+++ b/templates/shop/department.html.twig
@@ -1,7 +1,10 @@
 {% extends "base.html.twig" %}
 {% block title %}
-	Rayon
-	{{"\"" ~ category.name ~ "\""}}
+	{% if search is defined %}
+		{{"Recherche " ~ search }}
+	{% else %}
+		{{"Rayon \"" ~ category.name ~ "\""}}
+	{% endif %}
 {% endblock %}
 {% block body %}
 	<div class="card col-md-12">
