--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -37,7 +37,7 @@
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
 					<a class="dropdown-item" href="{{ path('app_login') }}">{{ 'default.navbar.register'|trans }}</a>
-					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('user_index') }}">
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('user_show') }}">
 						{{ 'default.navbar.myAccount'|trans }}
 					</a>
 					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('user_orders') }}">
@@ -50,9 +50,10 @@
 			</li>
 			{% if is_granted('ROLE_ADMIN') %}
 				<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
-					<span class="nav-link disabled" href="-tools">
+					<a class="nav-link" href="{{ path('user_index') }}">
+						<i class="fas fa-tools mx-2"></i>
 						{{ 'default.navbar.backOffice'|trans }}
-					</span>
+					</a>
 				</li>
 			{% endif %}
 		</ul>
