--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,73 +1,50 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Mon compte
+	Utilisateurs
 {% endblock %}
 
-{% set userOrders = app.user.getOrders() %}
-{%	set nbUserOrders = 0  %}
-{% for order in userOrders  %}
-	{% set nbUserOrders = nbUserOrders + 1  %}
-{% endfor  %}
-
 {% block body %}
-	{% if app.user %}
-		<div class="col-8 offset-2">
-			<div class="card">
-				<div class="card-header">
-					<h3>
-						<i class="fas fa-user-check"></i>
-						Mon Compte
-					</h3>
-				</div>
-				<div class="card-body">
-					<table class="table table-striped table-sm table-hover">
+
+	<div class="col-8 offset-2">
+		<div class="card">
+			<div class="card-header">
+				<h3>
+					<i class="fas fa-users"></i>
+					Les Utilisateurs
+				</h3>
+			</div>
+
+			<div class="card-body">
+				<table class="table table-striped table-sm table-hover">
+					<thead>
 						<tr>
-							<th>
-								N° Client
-							</th>
-							<td>
-								{{ app.user.id }}
-							</td>
+							<th>Id</th>
+							<th>Email</th>
+							<th>Roles</th>
+							<th>Nom</th>
+							<th>Prenom</th>
 						</tr>
-						<tr>
-							<th>
-								Nom
-							</th>
-							<td>
-								{{ app.user.name }}
-							</td>
-						</tr>
-						<tr>
-							<th>
-								Prénom
-							</th>
-							<td>
-								{{ app.user.firstName }}
-							</td>
-						</tr>
-						<tr>
-							<th>
-								Email
-							</th>
-							<td>
-								{{ app.user.email }}
-							</td>
-						</tr>
-						<tr>
-							<th>
-								Activité
-							</th>
-							<td>
-								<a class="btn btn-primary" href="{{ path('user_orders') }}">
-									<span class="badge badge-light">{{ nbUserOrders }}</span>
-									Commande(s)
-								</a>
-							</td>
-						</tr>
-					</table>
-				</div>
+					</thead>
+					<tbody>
+						{% for user in users %}
+							<tr>
+								<td>{{ user.id }}</td>
+								<td>{{ user.email }}</td>
+								<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+								<td>{{ user.name }}</td>
+								<td>{{ user.firstName }}</td>
+							</tr>
+						{% else %}
+							<tr>
+								<td colspan="7">no records found</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
 			</div>
 		</div>
-	{% endif %}
+	</div>
+
+	<a href="{{ path('user_new') }}">Nouveau</a>
 {% endblock %}
