--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -9,12 +9,12 @@
 				<i class="fas fa-store"></i>
 				{{  'shop.index.backOffice' | trans }}
 				{{ nbCategories }}
-				Catégories
+				catégories
 			</h1>
 		</div>
 		<div class="card-body row">
 			{% for category in categories %}
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<div class="card clickable" onclick={{"location='/" ~ app.request.attributes.get('_locale') ~ "/shop/department/" ~ category.id ~ "'"}}>
 						<img src={{ asset(category.image) }} class="card-img-top" alt="Fruits">
 						<div class="card-body">
